# trade-telegram-bot

./: .gitignore  .pre-commit-config.yaml  Makefile  Procfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  prod.yml
migrations/: env.py
migrations/versions/: 3912a5f2c4e8_add_sweepcast_table.py  4070bec716bf_split_columns_add_new_columns_volume_.py  4_add_option_table.py  7af429110927_change_uid_501_arturkutsevol_gid_20_.py
tests/: __init__.py  conftest.py
tests/data/: data.csv  types.py
tests/handlers/: test_echo.py  test_input_csv.py
trade_telegram_bot/: bot.py
trade_telegram_bot/core/: cache.py  db.py  envs.py  logger.py  manage.py
trade_telegram_bot/etl/: extractor.py  loader.py  transformer.py
trade_telegram_bot/handlers/: echo.py  input_csv.py
trade_telegram_bot/models/: __init__.py  option.py  sweepcast.py
trade_telegram_bot/secret_vars/: .env.template
trade_telegram_bot/utils/: consts.py  handle_file.py  store.py
