[tool.poetry]
name = "trade_telegram_bot"
version = "1.1.0"
description = "Trading bot for the stock exchange on Telegram"
authors = ["Artur Kutsevol arthur.kutsevol@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.22.2"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
sentry-sdk = "^1.9.10"
tomli = "^2.0.1"
SQLAlchemy = "^1.4.42"
mysqlclient = "^2.1.1"
pandas = "^1.5.1"
alembic = "^1.8.1"
maya = "^0.6.1"
alembic-autogen-check = "^1.1.1"
redis = "^4.4.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"
pytest-html = "^3.1.1"
pytest-cov = "^4.0.0"
coverage = "^6.5.0"
coverage-badge = "^1.1.0"
black = {version = "^22.10.0", allow-prereleases = true}
isort = {extras = ["colors"], version = "^5.10.1"}
pyupgrade = "^3.1.0"
bandit = "^1.7.4"
safety = "^2.3.1"
flake8 = "^5.0.4"
pyproject-flake8 = "^5.0.4"

[tool.black]
# https://github.com/psf/black
target-version = ["py310"]
line-length = 120
color = true

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 310
line_length = 120
known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true

[tool.flake8]
max-line-length = 120

[tool.bandit]
exclude_dirs = ["tests"]

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ["tests"]

[coverage.paths]
source = "trade_telegram_bot"

[coverage.run]
branch = true

[coverage.report]
fail_under = 50
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
