[tool.poetry]
name = "trade_telegram_bot"
version = "1.1.4"
description = "Trading bot for the stock exchange on Telegram"
authors = ["Artur Kutsevol <arthur.kutsevol@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "2.25.1"
pydantic = {extras = ["dotenv"], version = "1.10.4"}
sentry-sdk = "1.14"
tomli = "2.0.1"
SQLAlchemy = "2.0.4"
mysqlclient = "2.1.1"
pandas = "1.5.3"
maya = "0.6.1"
alembic = "1.9.2"
alembic-autogen-check = "1.1.1"
redis = "4.4.2"
SQLAlchemy-Utils = "0.39.0"
cryptography = "39.0.1"
pymysql = "1.0.2"

[tool.poetry.dev-dependencies]
pre-commit = "2.21.0"
pytest = "7.2.1"
pytest-asyncio = "0.19.0"
pytest-html = "3.2.0"
pytest-cov = "4.0.0"
coverage = "6.5.0"
coverage-badge = "1.1.0"
black = {version = "22.12.0", allow-prereleases = true}
isort = {extras = ["colors"], version = "5.12.0"}
pyupgrade = "3.3.1"
bandit = "1.7.4"
safety = "2.3.5"
flake8 = "5.0.4"
pyproject-flake8 = "5.0.4.post1"
testcontainers = {extras = ["redis", "mysql"], version = "3.7.1"}

[tool.black]
# https://github.com/psf/black
target-version = ["py310"]
line-length = 120
color = true

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 310
line_length = 120
known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true

[tool.flake8]
max-line-length = 120

[tool.bandit]
exclude_dirs = ["tests"]

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ["tests"]

[coverage.paths]
source = "trade_telegram_bot"

[coverage.run]
branch = true

[coverage.report]
fail_under = 50
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
